# cars-service-1

./: README.md  docker-compose.yml  pyproject.toml
cars_app/: app.py
cars_app/car/: model.py  service.py  types.py  validator.py
cars_app/data_loader/: cars_loader.py  json_loader.py
cars_app/db/model/: car.py  component.py
cars_app/db/repo/: car.py  component.py  crud.py
cars_app/logger/: model.py
tests/test_car/: test_model.py  test_service.py
tests/test_data_loader/: test_cars_loader.py  test_json_loader.py
tests/test_validator/: test_text.py
