[tool.poetry]
name = "car-service"
version = "0.1.0"
description = ""
authors = ["SzymiYay <szymoon09@gmail.com>"]
readme = "README.md"
packages = [{include = "car_service"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
