[tool.poetry]
name = "car-service"
version = "0.1.0"
description = ""
authors = ["SzymiYay <szymoon09@gmail.com>"]
readme = "README.md"
packages = [{include = "cars_app"}]

[tool.poetry.dependencies]
python = "^3.11"
mysql-connector-python = "^8.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
